--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,16 @@ Grid
 
 body {
   background-color: darkgrey;
+  width: 100%;
+  height: 100%;
 }
 
 .game {
   box-sizing: border-box;
   width: 100%;
-  padding-bottom: 2em;
+  padding: 2em;
 }
+
 
 .grid {
   margin: 2em 2em 2em 2em;
@@ -18,7 +21,6 @@ body {
   max-width: 80em;
   box-sizing: border-box;
   background-color: darkgrey;
-  overflow: auto;
 }
 
 .tile {
@@ -63,6 +65,10 @@ body {
 
 }
 
-.clear {
+footer {
+  display: block;
+  background-color: darkgrey;
+  width: 100%;
+  height: 2em;
   clear: both;
 }
