--- a/css/main.css
+++ b/css/main.css
@@ -17,31 +17,33 @@ body {
 
 .grid {
   margin: 2em 2em 2em 2em;
-  padding: 0;
   max-width: 80em;
-  box-sizing: border-box;
   background-color: darkgrey;
 }
 
 .tile {
   box-sizing: border-box;
   display: inline-block;
-  width: 33.33333%;
+  width: 33.3333%;
   float: left;
-  background-color: darkgrey;
+  background-color: rgb(232, 68, 68);
   position: relative;
-  padding-bottom: 33.33333%;
+  padding-bottom: 33.3333%;
+  border-radius: 0.5em;
+  border: 1px solid darkgrey;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 40em) {
   .tile {
   box-sizing: border-box;
   display: inline-block;
-  width: 16.66667%;
+  width: 16.0%;
   float: left;
-  background-color: darkgrey;
   position: relative;
-  padding-bottom: 16.66667%;
+  padding-bottom: 16.0%;
+  background-color: rgb(232, 68, 68);
+  border-radius: 0.5em;
+  border: 1px solid darkgrey;
 }
 }
 
@@ -49,20 +51,39 @@ body {
   height: 0;
   width: 0;
   position: absolute;
+  z-index: -1;
 }
+
+.tile input:not(:checked) + .tile-style .icon {
+  opacity: 1;
+}
+
+.tile input:checked + .tile-style .icon {
+  opacity: 0;
+}
+
 
 .tile-style {
   height: 100%;
   width: 100%;
-  background-color: white;
+  background-color: rgb(232, 68, 68);
   display: block;
-  margin: 0.15em;
   position: absolute;
   border-radius: 0.5em;
 }
 
 .icon {
+  box-sizing: border-box;
+  font-family: untitled-font-1;
+  font-size: 2em;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+}
 
+.clear {
+  display: block;
+  clear: both;
 }
 
 footer {
