Change original media query

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ body {
   border: 1px solid darkgrey;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 480px) {
   .tile {
   box-sizing: border-box;
   width: 16.66%;
