--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,6 @@ footer {
 
 /***********************************
 New Game Page
-=======
 ***********************************/
 
 .new-game-body {
@@ -158,6 +157,7 @@ New Game Page
   justify-content: center;
   font-family: 'PT Sans', sans-serif;
   color: white;
+  margin: auto 0 auto 0;
 }
 
 .welcome-box {
