--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ body {
   padding-bottom: 33.3333%;
   border-radius: 0.5em;
   border: 1px solid #3f51b5;
+  perspective: 1000;
 }
 
 @media screen and (min-width: 40em) {
@@ -107,11 +108,11 @@ body {
   z-index: -1;
 }
 
-.tile input:not(:checked) + .tile-style .icon {
+.tile input:not(:checked) + .tile-style{
   opacity: 0;
 }
 
-.tile input:checked + .tile-style .icon {
+.tile input:checked + .tile-style{
   opacity: 1;
 }
 
@@ -125,6 +126,7 @@ body {
   border-radius: 0.5em;
   justify-content: center;
   align-items: center;
+
 }
 
 .icon {
@@ -184,6 +186,8 @@ New Game Page
   width: 25%;
   color: white;
   font-size: 1.1em;
+  transition: background-color .8s ease;
+  transition: color .8s ease;
 }
 
 @media screen and (max-width: 40em) {
@@ -210,8 +214,50 @@ New Game Page
 
 /*  Animations */
 
+.menu-button:hover {
+  background-color: white;
+  color: #7986cb;
+}
 
+audio {
+  visibility: hidden;
+}
 
+@keyframes flipcard {
+  0% {
+		transform: rotateY(0deg);
+	}
+	25% {
+		transform: rotateY(45deg);
+	}
+	50% {
+		transform: rotateY(90deg);
+	}
+  75% {
+    transform: rotateY(135deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@-webkit-keyframes flipcard {
+  0% {
+    -webkit-transform: rotateY(0deg);
+  }
+  25% {
+    -webkit-transform: rotateY(45deg);
+  }
+  50% {
+    -webkit-transform: rotateY(90deg);
+  }
+  75% {
+    -webkit-transform: rotateY(135deg);
+  }
+  100% {
+    -webkit-transform: rotateY(180deg);
+  }
+}
 
 /***********************************
 Hard Mode Page
